--- a/presentation.tex
+++ b/presentation.tex
@@ -21,7 +21,7 @@
 \title[]{Forensic Analysis of Web Data}
 \author{Erhard Dinhobl}
 \institute{Vienna University of Technology - Information and Software Engineering Group}
-\date{5.10.2016}
+\date{3.10.2016}
 
 \begin{document}
 
@@ -110,7 +110,7 @@ Best for online crime investigation!
   \item preservation of evidences up to 60 years (StPO \S60)
   \item important due to file formats (determined with DROID)
   \item for web crawling WARC file format (open format)
-  \item for immediate investigation: normale files
+  \item for immediate investigation: normal files
   \item the index: DEML file
   \begin{itemize}
     \item by National Centre for Forensic Science
@@ -133,6 +133,10 @@ Best for online crime investigation!
 	\item Application, Content, Principal, System
   \end{itemize}
 \end{itemize}
+
+\begin{figure}
+\includegraphics[scale=0.4]{model2.png}
+\end{figure}
 
 \end{frame}
 
@@ -241,6 +245,7 @@ Challenges:
   \item non-investigative
   \begin{itemize}
     \item collecting event data
+    \item ... market watch
     \item ... person data (incl. relations)
     \item ... news
     \item ... locations
